--- a/Arian.Quantiq/Views/Shared/_Layout.cshtml
+++ b/Arian.Quantiq/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Arian.Quantiq.styles.css" asp-append-version="true" />
     <link rel="icon" type="image/x-icon" href="~/icons/Quantiq.ico" asp-append-version="true" />
 </head>
@@ -47,7 +46,7 @@
 
 
 
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
